# decompil.in

./: .db.env.example  .env.example  .gitignore  FrontendDockerfile  LICENSE  README.md  bun.lockb  docker-compose.yml  package.json  svelte.config.js  tailwind.config.js
backend/: .env.example  .gitignore  Dockerfile  README.md  bun.lockb  drizzle.config.ts  package.json
backend/src/: authentication.ts  ctf.ts  index.ts  setup.ts  user.ts  whatamiplayin.ts
backend/src/ctf/: client.ts
backend/src/drizzle/: index.ts
backend/src/drizzle/db/: auth-schema.ts  log-schema.ts  schema.ts
backend/src/utils/: auth.ts
dcli/: .gitignore  Cargo.toml
dcli/src/: main.rs
maintenance-mode/: .gitignore  package.json  wrangler.jsonc
maintenance-mode/public/: index.html
maintenance-mode/src/: index.ts
nginx-conf/: whitelist_cloudflare.conf
src/lib/: Biography.svelte  MarkdownImage.svelte  TerminalWindow.svelte  api.js  auth-client.js  spotify.js
src/lib/biopages/: about.md  ctf.md  projects.md  skills.md
src/lib/server/: spotify-auth.js
src/routes/: +layout.svelte  +page.svelte  Biography.svelte  Desktop.svelte  Mobile.svelte
src/routes/ctf/: +layout.svelte  +page.js  +page.svelte  CtfCard.svelte  Drawer.svelte  GuideEditor.svelte  Guides.svelte  Leaderboard.svelte  Loading.svelte  LoginModal.svelte  Mainpage.svelte  ProfilePage.svelte  SettingsModal.svelte  TopNav.svelte  Welcome.svelte
src/routes/secret/ctf/: +layout.svelte  +page.svelte  CtfCard.svelte  (+6 more)
src/routes/setup/: +server.js  server.js
src/routes/whatamiplayin/: +server.js  server.js
