[package]
name = "dcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
colored = "3.0.0"
inquire = "0.7.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
